--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "number-facts",
+  "name": "nodb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
