--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cors": "^2.8.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-toastify": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
